# ESDC_ESP32S3

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  justfile  partitions-16MiB.csv  plan.md  sdkconfig
.codegraph/: daemon.pid
components/app/: CMakeLists.txt
components/app/inc/: app.h  app_gui.h
components/app/src/: app.c  app_gui.c
components/bsp/: CMakeLists.txt
components/bsp/bsp_audio/: bsp_audio.c  bsp_audio.h
components/bsp/bsp_exio/: bsp_exio.c  bsp_exio.h
components/bsp/bsp_i2c/: bsp_i2c.c  bsp_i2c.h
components/bsp/bsp_i2s/: bsp_i2s.c  bsp_i2s.h
components/bsp/bsp_key/: bsp_key.c  bsp_key.h
components/bsp/bsp_lcd/: bsp_lcd.c  bsp_lcd.c.bak  bsp_lcd.h  bsp_lcd.h.bak  bsp_lcd_fonts.h
components/bsp/bsp_led/: bsp_led.c  bsp_led.h
components/bsp/bsp_mqtt/: bsp_mqtt.c  bsp_mqtt.h
components/bsp/bsp_rgblcd/: bsp_rgblcd.c  bsp_rgblcd.h
components/bsp/bsp_sdcard/: bsp_sdcard.c  bsp_sdcard.h
components/bsp/bsp_spi/: bsp_spi.c  bsp_spi.h
components/bsp/bsp_spilcd/: bsp_spilcd.c  bsp_spilcd.h
components/bsp/bsp_touch/: bsp_touch.c  bsp_touch.h
components/bsp/bsp_wifi/: bsp_wifi.c  bsp_wifi.h
components/common/: CMakeLists.txt
components/common/inc/: common.h  common_header.h  user_common.h
components/impl/: CMakeLists.txt
components/impl/inc/: impl_exio.h  impl_key.h  impl_lcd.h  impl_led.h  impl_mqtt.h  impl_rgblcd.h  impl_sdcard.h  impl_spilcd.h  impl_touch.h  impl_tts.h  impl_wifi.h  lv_disp_port.h  lv_indev_port.h
components/impl/src/: impl_exio.c  impl_key.c  impl_lcd.c  impl_led.c  impl_mqtt.c  impl_rgblcd.c  impl_spilcd.c  impl_touch.c  impl_tts.c  impl_wifi.c  lv_disp_port.c  lv_indev_port.c
components/middlewares/: CMakeLists.txt  linker.lf
components/middlewares/ek_conf/: ek_conf.h
components/middlewares/ek_utils/: ek_export.ld
components/middlewares/ek_utils/inc/: ek_assert.h  ek_conf.h  ek_io.h  ek_list.h  ek_shell.h  ek_vec.h
components/middlewares/ek_utils/src/: ek_port.c
components/middlewares/ek_utils_bak/inc/: ek_conf.h  ek_def.h  ek_evoke.h  ek_log.h
components/middlewares/ek_utils_bak/src/: ek_log.c  ek_port.c
components/middlewares/lvgl_v8_3_11/inc/: lv_disp_port.h
components/middlewares/lvgl_v8_3_11/src/: lv_disp_port.c
components/middlewares/lvgl_v9_5/inc/: lv_disp_port.h  lv_indev_port.h
components/middlewares/lvgl_v9_5/src/: lv_disp_port.c  lv_indev_port.c
components/middlewares/stumb/: mdw_stub.h  mdw_stumb.c
components/platform/: CMakeLists.txt
components/platform/inc/: plat_base.h  plat_key.h  plat_lcd.h  plat_led.h  plat_mqtt.h  plat_touch.h  plat_tts.h  plat_wifi.h  platform.h
components/platform/src/: plat_base.c  plat_key.c  plat_lcd.c  plat_led.c  plat_mqtt.c  plat_touch.c  plat_tts.c  plat_wifi.c
doc/: DNESP32S3引脚分配表.md  ESP32S3_RGB_Touch_I2S建议引脚图.md  io_map.md
doc/io_map/: io_map.md  io_map_new.md
doc/lvgl_pro/: built_in_widgets.md  cli.md  editor.md  figma.md  index.md  integration.md  learn-by-examples.md  online-viewer.md  syntax.md
doc/lvgl_pro/built_in_widgets/: enums.md  lv_arc.md  lv_bar.md  lv_button.md  lv_buttonmatrix.md  lv_calendar.md  lv_canvas.md  lv_chart.md  lv_checkbox.md  lv_dropdown.md  lv_gif.md  lv_image.md  lv_imagebutton.md  lv_keyboard.md  lv_label.md  lv_led.md  lv_line.md  lv_obj.md  lv_qrcode.md  lv_roller.md  lv_scale.md  lv_slider.md  lv_spangroup.md  lv_spinbox.md  lv_spinner.md  lv_switch.md  lv_table.md  lv_tabview.md  lv_textarea.md  style_props.md
doc/lvgl_pro/editor/: hotkeys.md  installation.md  license.md  overview.md  user-interface.md
doc/lvgl_pro/integration/: arduino-ide.md  cmake.md  loading-xml-files.md  renesas.md  using-exported-c-code.md  zephyr.md
doc/lvgl_pro/syntax/: animations.md  api.md  components.md  constants.md  data-binding.md  events.md  fonts.md  images.md  introduction.md  overview.md  preview.md  project.md  screens.md  styles.md  testing.md  translations.md  view.md  widgets.md  xml-license.md
main/: CMakeLists.txt  idf_component.yml  main.c  secrets.h.example
main/app/: CMakeLists.txt
main/app/inc/: app.h  app_ai_advice.h  app_ai_chat.h  app_console.h  app_gui.h  app_ip_location.h  app_key.h  app_led.h  app_mqtt.h  app_smart_home.h  app_tts.h  app_ui.h  app_weather.h  app_weather_api.h  app_weather_store.h  app_wifi.h  app_wifi_msg.h  app_wifi_store.h
main/app/src/: app.c  app_ai_advice.c  app_ai_chat.c  app_console.c  app_gui.c  app_ip_location.c  app_key.c  app_led.c  app_mqtt.c  app_smart_home.c  app_tts.c  app_ui.c  app_weather.c  app_weather_api.c  app_weather_store.c  app_wifi.c  app_wifi_store.c  provider_qweather.c
main/test/: test_main.c  test_main.h  test_weather.c  test_weather.h
main/ui/: .eez-project-build  CMakeLists.txt  actions.c  actions.h  eez-flow.cpp  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  vars.h
main/ui/actions/: ai_chat_actions.c  main_page_actions.c  smart_home_actions.c  volume_actions.c  weather_actions.c  wifi_actions.c
main/ui/eez/: eez.eez-project  eez.eez-project-ui-state
main/ui/lvgl_editor/: file_list_gen.cmake  globals.xml  project.xml  ui.c  ui.h  ui_gen.c  ui_gen.h
main/ui/lvgl_editor/components/: nav_bar.xml  nav_bar_gen.c  nav_bar_gen.h  volume_slider.xml  volume_slider_gen.c  volume_slider_gen.h  wifi_btn.xml  wifi_btn_gen.c  wifi_btn_gen.h
main/ui/lvgl_editor/screens/: ai_chat.xml  ai_chat_gen.c  ai_chat_gen.h  main_page.xml  main_page_gen.c  main_page_gen.h  smart_home.xml  smart_home_gen.c  smart_home_gen.h  weather.xml  weather_gen.c  weather_gen.h
main/ui/screens/: ui_scr_wifi.c  ui_scrs.h
main/ui/vars/: volume_vars.c  wifi_vars.c
